# investment-advisory-multi-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: cli.py  config.py  logging.py
app/agents/: base.py  market_research.py  portfolio.py  risk.py  securities_analysis.py  supervisor.py
app/data/: models.py  repositories.py
app/errors/: circuit_breaker.py  exceptions.py  fallback.py  node_wrapper.py
app/graph/: builder.py  clarifier.py  memory_nodes.py  planner.py  reflector.py  (+3 more)
docs/: 00_prerequisites_and_setup.md  Investment Advisory Multi.docx  architecture.md  design_patterns.md  production_plan.md
evals/: _ragas_compat.py  harness.py  report.py
notebooks/: README.md  phase00_scaffold.ipynb  phase01_data_and_portfolio_agent.ipynb  phase02_supervisor_and_routing.ipynb  phase03_adapters_registry_resilience.ipynb  phase04_securities_analysis.ipynb  phase05_rag_knowledge_base.ipynb  phase06_risk_assessment.ipynb  phase07_memory_and_isolation.ipynb  phase08_planning_and_synthesis.ipynb  phase09_guardrails_and_reflection.ipynb  phase10_clarification_hitl.ipynb  phase11_error_handling_circuit_breaker.ipynb  phase12_optimization.ipynb  phase13_evaluation.ipynb  phase14_ui_smoke.ipynb  phase15_deliverables.ipynb
scripts/: generate_synthetic_clients.py  ingest_kb.py  seed_profiles.py
tests/: test_phase0.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
ui/: async_bridge.py  streamlit_app.py
(+534 files in other folders)
